--- a/.gitignore
+++ b/.gitignore
@@ -135,14 +135,15 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-# .env
-# .envrc
-# .venv
-# env/
-# venv/
-# ENV/
-# env.bak/
-# venv.bak/
+.env
+.envrc
+.venv
+env/
+venv/
+/venv/
+ENV/
+env.bak/
+venv.bak/
 
 # Spyder project settings
 .spyderproject
@@ -173,7 +174,7 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea
 
 # Abstra
 # Abstra is an AI-powered process automation framework.
